--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="ca.unb.mobiledev.mapgame.ui.notifications.NotificationsFragment"
+        android:name="ca.unb.mobiledev.mapgame.ui.leaderboard.LeaderboardFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_leaderboard" />
 </navigation>
