--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -9,15 +9,16 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="User List"
-        android:textSize="18sp"
         android:gravity="center"
-        android:padding="16dp" />
+        android:padding="4dp"
+        android:text="Leaderboard"
+        android:textSize="48sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <!-- User data will be added here dynamically -->
     </LinearLayout>
 </LinearLayout>
