firebase register and login

--- a/app/src/main/res/layout/activity_register_acitivity.xml
+++ b/app/src/main/res/layout/activity_register_acitivity.xml
@@ -7,11 +7,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".LoginActivity">
+    tools:context=".RegisterActivity">
 
 
     <TextView
-        android:text="@string/login"
+        android:text="Register"
         android:textSize="25sp"
 
         android:textStyle="bold"
@@ -46,18 +46,18 @@
 
 
     <Button
-        android:id="@+id/btn_login"
-        android:text="Login"
+        android:id="@+id/btn_register"
+        android:text="Register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"></Button>
 
     <TextView
-        android:text="Click to register"
+        android:text="Click to login"
         android:gravity="center"
         android:textStyle="bold"
         android:textSize="20sp"
         android:layout_marginTop="20dp"
-        android:id="@+id/registerNow"
+        android:id="@+id/loginNow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
@@ -68,5 +68,5 @@
 
 
 
-        </LinearLayout>
+</LinearLayout>
 
