--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,4 +16,9 @@
         android:icon="@drawable/baseline_leaderboard_24"
         android:title="@string/title_notifications" />
 
+    <item
+        android:id="@+id/navigation_settings"
+        android:icon="@drawable/baseline_settings_24"
+        android:title="Settings" />
+
 </menu>
