--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,10 @@
         android:name="ca.unb.mobiledev.mapgame.ui.leaderboard.LeaderboardFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_leaderboard" />
+
+    <fragment
+        android:id="@+id/navigation_settings"
+        android:name="ca.unb.mobiledev.mapgame.ui.settings.SettingsFragment"
+        android:label="Settings"
+        tools:layout="@layout/fragment_settings" />
 </navigation>
