--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -13,7 +13,6 @@
     <TextView
         android:text="User Settings"
         android:textSize="25sp"
-
         android:textStyle="bold"
         android:gravity="center"
         android:layout_width="match_parent"
@@ -21,7 +20,7 @@
         android:layout_height="wrap_content" />
 
     <TextView
-        android:text="Currently signed in as: "
+        android:text=""
         android:id="@+id/currentUser"
         android:textSize="15sp"
         android:textStyle="normal"
