--- a/app/src/main/res/layout/activity_register_acitivity.xml
+++ b/app/src/main/res/layout/activity_register_acitivity.xml
@@ -46,6 +46,7 @@
 
 
     <Button
+        android:layout_marginTop="20dp"
         android:id="@+id/btn_register"
         android:text="Register"
         android:layout_width="wrap_content"
