--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -50,17 +50,9 @@
 
     <Button
         android:id="@+id/btn_logout"
-        android:text="Logout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></Button>
-
-
-
-
-
-
-
-
+        android:layout_height="wrap_content"
+        android:text="Logout"></Button>
 
 
 </LinearLayout>
