--- a/app/src/main/res/layout/activity_congratulations.xml
+++ b/app/src/main/res/layout/activity_congratulations.xml
@@ -49,43 +49,36 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/centerGuideline" />
 
-    <Button
-        android:id="@+id/closeAppButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
-        android:layout_marginEnd="8dp"
-        android:onClick="closeApp"
-        android:text="Close App"
-        app:layout_constraintEnd_toStartOf="@+id/leaderboardButton"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/congratulationsMessage" />
-
-
-    <Button
-        android:id="@+id/leaderboardButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="96dp"
-        android:onClick="goToLeaderboard"
-        android:text="Leaderboard"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/closeAppButton"
-        app:layout_constraintTop_toBottomOf="@id/congratulationsMessage" />
 
     <Button
         android:id="@+id/settingsButton"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
+        android:layout_marginTop="24dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="152dp"
         android:onClick="goToSettings"
         android:text="Settings"
+        app:layout_constraintTop_toBottomOf="@id/congratulationsMessage" />
+
+    <Button
+        android:id="@+id/leaderboardButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:onClick="goToLeaderboard"
+        android:text="Leaderboard"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/settingsButton" />
+
+    <Button
+        android:id="@+id/closeAppButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:onClick="closeApp"
+        android:text="Close App"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteY="554dp" />
+        app:layout_constraintTop_toBottomOf="@id/leaderboardButton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
