Added Settings and Shared Prefernces

--- a/app/src/main/res/layout/activity_congratulations.xml
+++ b/app/src/main/res/layout/activity_congratulations.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintGuide_percent="0.42" />
 
     <ImageView
         android:id="@+id/cupEmoji"
@@ -27,27 +27,27 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.828" />
+        app:layout_constraintVertical_bias="0.488" />
+
+    <!-- Close App Button -->
+
+    <!-- Go to Leaderboard Button -->
 
     <TextView
         android:id="@+id/congratulationsMessage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
         android:text="Congratulations! You have completed all the levels!"
+        android:textColor="@android:color/white"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:textColor="@android:color/white"
-        app:layout_constraintTop_toBottomOf="@id/centerGuideline"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"/>
-
-    <!-- Close App Button -->
-
-    <!-- Go to Leaderboard Button -->
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/centerGuideline" />
 
     <Button
         android:id="@+id/closeAppButton"
@@ -74,5 +74,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/closeAppButton"
         app:layout_constraintTop_toBottomOf="@id/congratulationsMessage" />
+
+    <Button
+        android:id="@+id/settingsButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="152dp"
+        android:onClick="goToSettings"
+        android:text="Settings"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="554dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
