deleted nneccessary xml and fixed one hint

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -27,7 +27,7 @@
         <item>Hint: The city is known for the Golden Gate Bridge and tech innovation.(County:U.S., No. of ch.:11)</item>
         <item>Hint: The city is known for its diverse culture, CN Tower, and being a major financial hub in Canada.(County:Canada, No. of ch.:7)</item>
         <item>Hint: The city is famous for its opera house and kangaroos.(County:Australia, No. of ch.:6)</item>
-        <item>Hint: The city is known for its advanced technology and cherry blossoms.(No. of ch.:5)</item>
+        <item>Hint: The city is known for its advanced technology and cherry blossoms.(Country:Japan, No. of ch.:5)</item>
     </string-array>
 
     <!-- Array Resource for Reply Values -->
